--- a/_posts/usaco-analysis/2021-01-26-USACO.md
+++ b/_posts/usaco-analysis/2021-01-26-USACO.md
@@ -18,25 +18,23 @@ useTOC: false
 <!-- Add new years HERE BELOW -->
 {% assign years = "2021,2020,2019,2018,2017,2016" | split:"," %}
 {%assign groups = "Bronze,Silver,Gold" | split:","%}
-### 筛选器
 
-#### Year
+##### Year
 
 <div class="button-box">
   {% for eachYear in years%}
-    <button class="main-button" onClick="usaco_selector({{eachYear}});"> {{eachYear}} </button>
+    <button class="main-button" onClick="usaco_selector('{{eachYear}}');" id="btnYear{{eachYear}}"> {{eachYear}} </button>
   {% endfor %}
-  <button class="main-button" onClick="usaco_selector('all');"> All </button>
+  <button class="main-button" onClick="usaco_selector('all');" id="btnYearAll"> All </button>
 </div>
 
----
+##### Group
 
-#### Group
 <div class="button-box">
   {% for eachGroup in groups%}
-    <button class="main-button" onClick="usaco_group_selector({{eachGroup}});"> {{eachGroup}} </button>
+    <button class="main-button" onClick="usaco_group_selector('{{eachGroup}}');" id="btnGroup{{eachGroup}}"> {{eachGroup}} </button>
   {%endfor%}
-  <button class="main-button" onClick="usaco_group_selector('all');"> All </button>
+  <button class="main-button" onClick="usaco_group_selector('all');" id="btnGroupAll"> All </button>
 </div>
 
 ---
@@ -47,7 +45,7 @@ useTOC: false
   {% assign seasons = "Jan, Feb, Open, Dec" | split: ", " %}
   {% for eachSeason in seasons %}
     <h4>{{eachSeason}}</h4>
-    {% assign list = site.tags["USACO-analysis"] | where: 'year', eachYear | where: 'season', eachSeason%}
+    {% assign list = site.tags["USACO analysis"] | where: 'year', eachYear | where: 'season', eachSeason%}
     {%if list==empty%}
       <center><h4><font color="LightSteelBlue">We are waiting for your analysis for this season!</font></h4></center>
     {%else%}
