--- a/_posts/misc/2021-01-26-About-Us.md
+++ b/_posts/misc/2021-01-26-About-Us.md
@@ -29,8 +29,8 @@ useTOC: false
     <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/04/10/Copyright.html'">
         <h3>网页版权信息 Copyright</h3>
     </div>
-    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/03/08/Webpage-Documentation.html'">
-        <h3>网页维护信息 Site Documentation</h3>
+    <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/05/30/Site-Management.html'">
+        <h3>网页维护中心 Site Maintainance</h3>
     </div>
     <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/03/08/GWCS-Rules.html'">
         <h3>社团章程 Club Rules</h3>
