CS188  Chapter 13 Notes, Update CSS on colored text block and tags

--- a/_posts/2021-04-12-Search.md
+++ b/_posts/2021-04-12-Search.md
@@ -9,10 +9,18 @@ useTOC: false
 
 欢迎使用 GW CS Club 网站的站内搜索功能，搜索支持 中/英文搜索 内容，tag，日期，标题。 如果你发现你想要的结果不在候选列表里面，有可能是因为候选项数量 $> 30$ 被忽略了。
 
+<div style="display: flex; margin-bottom: 2rem; flex-wrap: wrap;">
+  {% assign sorted_tags = site.tags | sort %}
+  {% for tag in sorted_tags %}
+      <a class="tag" href="{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html#{{ tag[0] }}" style="margin-top: 5px">{{ tag[0] }} ({{tag[1] | size}})</a>
+  {% endfor %}
+</div>
+
+
 <div id="search-container">
-<input type="text" id="search-input" placeholder="Type anything to start Searching ...">
-<a style="float:right; font-size: 0.9rem; color: #999999; margin-top: 0.4rem;" href="{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html">想看旧版页面汇总？</a>
-<ul class="search-result-box" id="results-container" style="padding: 0 1.26rem 0 1.26rem;"></ul>
+  <input type="text" id="search-input" placeholder="Type anything to start Searching ...">
+  <a style="float:right; font-size: 0.9rem; color: #999999; margin-top: 0.4rem;" href="{{ site.baseurl }}/secondary-pages/2021/01/26/All-Posts.html">想看旧版页面汇总？</a>
+  <ul class="search-result-box" id="results-container" style="padding: 0 1.26rem 0 1.26rem;"></ul>
 </div>
 
 <!-- Script pointing to search-script.js -->
