delete useless code in personalize.css

--- a/_posts/notes/acsl/2021-01-26-ACSL.md
+++ b/_posts/notes/acsl/2021-01-26-ACSL.md
@@ -11,7 +11,7 @@ useTOC: false
 </div>
 
 <div class="card-box">
-    <div class="lite-card" onClick="window.location.href='{{ site.baseurl }}/2020/12/15/ACSL-Round1.html'">
+    <div class="flex-page-card" onClick="window.location.href='{{ site.baseurl }}/2020/12/15/ACSL-Round1.html'">
         <h3>ACSL Round 1</h3>
         <p>
             Number System <br/>
@@ -19,7 +19,7 @@ useTOC: false
             Pseudocode
         </p>
     </div>
-    <div class="lite-card"  onClick="window.location.href='{{ site.baseurl }}/2021/02/10/ACSL-Round2.html'">
+    <div class="flex-page-card"  onClick="window.location.href='{{ site.baseurl }}/2021/02/10/ACSL-Round2.html'">
         <h3>ACSL Round 2</h3>
         <p>
             Pre/in/post-fix<br/>
@@ -27,7 +27,7 @@ useTOC: false
             LISP
         </p>
     </div>
-    <div class="lite-card" onClick="window.location.href='{{ site.baseurl }}/2021/03/11/ACSL-Round3.html'">
+    <div class="flex-page-card" onClick="window.location.href='{{ site.baseurl }}/2021/03/11/ACSL-Round3.html'">
         <h3>ACSL Round 3</h3>
         <p>
             Data Structure<br/>
@@ -35,7 +35,7 @@ useTOC: false
             Regular Expression
         </p>
     </div>
-    <div class="lite-card" onClick="window.location.href='{{ site.baseurl }}/2021/04/13/ACSL-Round4.html'">
+    <div class="flex-page-card" onClick="window.location.href='{{ site.baseurl }}/2021/04/13/ACSL-Round4.html'">
         <h3>ACSL Round 4</h3>
         <p>
             Assembly Language<br/>
