--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -10,7 +10,7 @@ search_ignore: true
 这里记录了该网站所有的页面，并且按照页面的 Tag 进行了分类。用 `ctrl + f` 或者 `command + f` 来直接搜索你想看的页面吧！
 
 <div class="notification">
-  <a href="{{ site.baseurl }}/secondary-pages/2021/04/12/Search.html">新的搜索系统上线了，点击这里尝试一下</a>
+  <a href="{{ site.baseurl }}/secondary-pages/2021/04/12/Search.html" style = "color: rgb(173, 11, 170);">新的搜索系统上线了，点击这里尝试一下</a>
 </div>
 
 ---
