Extract Third Party Plugins from template, update CS188 Home and Chapter 13, Fix Article Head Image Position (negative margin)

--- a/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
+++ b/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
@@ -52,8 +52,8 @@ Which, unfortunately is also false, as not all low test score will lead to low G
 
 <mark>Probability statements are made with respect to a knowledge state, not with respect to the real world</mark>. When we say a student has a probability of $0.8$ to get low GPA, we are inference based on our knowledge state, not on the real world (as the student must either has high GPA or low GPA).
 
-[^1]: It's too much work to list the complete set of antecedents or consequents needed to ensure an exceptionless rule and too hard to use such rules
-[^2]: We don't have complete knowledge on most of the domain.
+[^1]: Laziness: It's too much work to list the complete set of antecedents or consequents needed to ensure an exceptionless rule and too hard to use such rules
+[^2]: Ignorance: We don't have complete knowledge on most of the domain.
 
 ### 13.1.2 Uncertainty and Rational Decisions
 
@@ -67,15 +67,114 @@ $$
 \text{Decision Theory} = \text{Probability Theory} + \text{Utility Theory}
 $$
 
-<div class="notification">
+<div class="info">
     <p>
         <b>Principle of Maximum Expected Utility (MEU)</b>: An agent is rational if and only if it chooses the action that yields the highest expected utility, averaged over all the possible outcomes of the action.
     </p>
 </div>
+
 
 ![b3d157353fb5ae7becc43a063d70e65](http://markdown-img-1304853431.cosgz.myqcloud.com/20210530180125.jpg)
 
 MEU is the statistical mean (expectation) of utility under best situation.
 
 ## 13.2 Probability Notation
+
+### 13.2.1 What Probabilities are about
+
+Probabilistic assertions talk about **how probable the situation will occur**. The set of all possible worlds is called the **sample space** ($\Omega$). The possible worlds are both *exclusive* and *exhaustive* - at any moment, there exist and only exist one world ($\omega$) as the actual world.
+$$
+0\leq P(\omega) \leq 1 \text{ for every } \omega \text{ and }\sum_{\omega\in\Omega}{P(\omega)} =1
+$$
+
+Usually, we won't use probabilistic assertions and queries on one particular possible worlds, but a set of them. For instance, we want to know the possibility of rolling two dices and their score sum up to 11. In Artificial Intelligence, such set is called a **proposition** ($\phi$).
+
+$$
+\text{For any proposition }\phi\text{ , }P(\phi) = \sum_{\omega\in\phi}{P(\omega)}
+$$
+
+Probabilities like $P(X=0)$ is called **unconditional** or **prior probabilities** (先验概率). It refer to <mark>degrees of belief in propositions <em>in the absence of any other information</em></mark>. In most of the situations, we do have some known information before probabilistic query. Such information is called **evidence**, and the probabilities of event **given the evidence** is called **conditional** or **posterior probabilities** (后验概率).
+
+<div class="notification">
+    <p>
+        The concept of prior and posterior probability is imporant in the contents below, so make sure you fully understand them before you continue reading.
+    </p>
+</div>
+When an agent make decision, **all the evidence it observed** will be the **evidence** and used to calculate the **posterior probabilities**.
+
+When we say $P(X=0\mid 0\leq X \leq 5)$ , it means that - "the probability of $X=0$ given $0\leq X\leq 5$ and <mark>no further information</mark>".
+
+$$
+P(a\mid b) = \frac{P(a \wedge b)}{P(b)}, \quad\quad P(a\wedge b) = P(a\mid b)P(b)
+$$
+
+### 13.2.2 The Language of propositions in Probability Assertions
+
+Variables in probability theory are called **random variables**. Every random variables has a **domain** - the set of all valid value a random variable can be assigned to.
+
+When we want to talk about the probabilities of *all* the possible values of a random variable, we can use the $\mathbf{P}$ notation.
+
+> Example:
+>
+> $$
+> P(Weather=sunny) = 0.6\\
+> P(Weather = rain) = 0.1\\
+> P(Weather = cloudy) = 0.29\\
+> P(Weather = snow) = 0.01
+> $$
+>
+> In this case, we can simplify it to this form:
+>
+> $$
+> \mathbf{P}(Weather) = \langle 0.6, 0.1, 0.29, 0.01 \rangle
+> $$
+
+The $\mathbf{P}$ statement defines the **probability distribution** for random variable.
+
+$\mathbf{P}(X\mid Y)$ can represent the conditional distribution of $X$ and $Y$ - that is, the value of $P(X=i \mid Y=j)$ for all possible $i, j$ pairs.
+
+$\mathbf{P}(X, Y)$ is called the **joint distribution** - which represent the possibility of $P(X=i \wedge Y=j)$ for all valid value pairs $i, j$.
+
+A **possible world** is defined to be an assignment of values to all of the random variables under consideration.
+
+The **full joint probability distribution** is the **joint probability distribution** with all random variable in consideration.
+
+## 13.3 Inference using Full Joint Distribution
+
+In this section, we describe a simple method for **probabilistic inference** - the computation of posterior probabilities for query propositions given observed evidence.
+
+![ddaf7f6ffe19a8da0a87db7d48e3fef](http://markdown-img-1304853431.cosgz.myqcloud.com/20210601192204.jpg)
+
+Suppose we have a domain only has three Boolean variables $Toothache$, $Cavity$ and $Catch$. The table above shows $\mathbf{P}(Cavity, Catch, Toothache)$.
+
+The first type of probabilistic inference is to calculate the **marginal probability** of random variable, i.e., the **unconditional probability distribution** of random variable. In this Example, we can query for $\mathbf{P}(Cavity)$.
+
+$$
+\begin{aligned}
+\mathbf{P}(Cavity) = &\mathbf{P}(Cavity, \neg catch, \neg toothache) + \mathbf{P}(Cavity, \neg catch, toothache) +\\ &\mathbf{P}(Cavity, catch, \neg toothache) + \mathbf{P}(Cavity, catch, toothache)\\
+=&\langle 0.008, 0.576\rangle + \langle 0.012, 0.064 \rangle + \langle 0.072, 0.144 \rangle + \langle 0.108, 0.016\rangle\\
+=&\langle 0.2, 0.8\rangle
+\end{aligned}
+$$
+
+This process is called **marginalization** - sum up the probabilities for each possible value of the other variables, thereby taking them out of the equation.
+
+<div class="info">
+    <b>Margininalization</b>
+    <p>
+        $$
+            \mathbf{P}(Y) = \sum_{z\in Z} {\mathbf{P}(Y, z)}
+        $$
+    </p>
+</div>
+In the example above, we can rewrite the calculation into the "standard" form:
+
+$$
+\mathbf{P}(Cavity) = \sum_{z\in\lbrace Catch, Toothache\rbrace}{P(Y, z)}
+$$
+
+
+---
+
+Notes:
 
