--- a/_posts/misc/2021-01-26-About-Us.md
+++ b/_posts/misc/2021-01-26-About-Us.md
@@ -31,6 +31,7 @@ useTOC: false
     </div>
     <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/05/30/Site-Management.html'">
         <h3>网页维护中心 Site Maintainance</h3>
+        <div style="background: url('../../../../assets/maintain.svg') no-repeat right bottom; height: 7rem; background-size: contain;"></div>
     </div>
     <div class="flex-page-card" onclick="window.location.href='{{ site.baseurl }}/2021/03/08/GWCS-Rules.html'">
         <h3>社团章程 Club Rules</h3>
