Update Chap 13 to 'independence'

--- a/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
+++ b/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
@@ -160,21 +160,107 @@ $$
 This process is called **marginalization** - sum up the probabilities for each possible value of the other variables, thereby taking them out of the equation.
 
 <div class="info">
-    <b>Margininalization</b>
+    <b>Marginalization</b>
     <p>
         $$
             \mathbf{P}(Y) = \sum_{z\in Z} {\mathbf{P}(Y, z)}
         $$
     </p>
 </div>
+
 In the example above, we can rewrite the calculation into the "standard" form:
 
 $$
 \mathbf{P}(Cavity) = \sum_{z\in\lbrace Catch, Toothache\rbrace}{P(Y, z)}
 $$
 
+A variant of this rule involves conditional probabilities instead of joint probabilities - using the Product rule.
+
+<div class="info">
+    <b>Conditioning</b>
+    <p>
+        $$
+        	\mathbf{P}(Y) = \sum_{z\in Z}{\mathbf{P}(Y\mid z)P(z)}
+        $$
+    </p>
+</div>
+
+In most cases, we are interested in computing *conditional probabilities* of some variables given evidence about others.
+
+Using Equation $$P(A\mid B) = \frac{P(A \wedge B)}{P(B)}$$, we can calculate the conditional probability from unconditional probability and joint probability.
+
+In the example above, we can evaluate the probability of $cavity$ given $toothache$.
+
+$$
+P(cavity \mid toothache) = \frac{P(cavity \wedge toothache)}{P(toothache)} = 0.6\\
+P(\neg cavity \mid toothache) = \frac{P(\neg cavity \wedge toothache)}{P(toothache)} = 0.4
+$$
+
+During the calculation, we notice that both $P(cavity\mid toothache)$ and $P(\neg cavity \mid toothache)$ is multiplied by a factor of $\frac{1}{P(toothache)}$. We call the value of $\frac{1}{P(toothache)}$  the **normalization constant**, denote as $\alpha$.
+
+Combining the **Marginalization** and **Normalization**, we can get a general equation to evaluate conditional probability from joint distribution.
+
+<div class="info">
+    <b>General Equation for Conditional Probability</b>
+    <p>
+        $$
+        \mathbf{P}(X\mid \mathbf{e}) 
+        = \underbrace{\alpha\mathbf{P}(X\mid \mathbf{e})}_{\text{Normalization with constant } \alpha}
+        = \alpha \cdot \underbrace{
+        	\sum_{\mathbf{y}\in Y}{\overbrace{
+        		\mathbf{P}(X,\mathbf{e}, \mathbf{y})}^{\text{Full joint distribution}}
+        }}_{\text{Remove unrelated variables } \mathbf{y}}
+        $$
+    </p>
+</div>
+Given the full joint distribution table, the equation above is able to answer any probabilistic queries for random variables. However, it **does not scale well**. If there are $n$ random boolean variables to consider, the size of joint distribution table will be $O(2^n)$ and takes $O(2^n)$ time to process the table.
+
+To solve this problem, we will use the tool of **independence** to simplify the relationship between random variables.
+
+## 13.4 Independence
+
+![ddaf7f6ffe19a8da0a87db7d48e3fef](http://markdown-img-1304853431.cosgz.myqcloud.com/20210601192204.jpg)
+
+To begin with, let's see back this case again and adding a fourth random variable $Weather = \lbrace sunny, cloudy \rbrace$.
+
+How are $P(toothache, catch, cavity, cloudy)$ related with $P(toothache, catch, cavity)$ related? According to the **Conditioning Rule**, we can know that
+
+$$
+P(toothache, catch, cavity, cloudy) = P(toothache, catch, cavity \mid cloudy) \cdot P(cloudy)
+$$
+
+To write in General form with $\mathbf{P}$ notation
+
+$$
+\mathbf{P}(Toothache, Catch, Cavity, Weather) = \mathbf{P}(Toothache, Catch, Cavity \mid Weather) \cdot \mathbf{P}(Weather)
+$$
+
+Since we don't expect the evidence on $Weather$ affect the probability distribution of $Toothache, Catch ,Cavity$, it is clear that
+
+$$
+\mathbf{P}(Toothache, Catch, Cavity \mid Weather) = \mathbf{P}(Toothache, Catch, Cavity)
+$$
+
+Therefore, we can say
+
+$$
+\mathbf{P}(Toothache, Catch, Cavity, Weather) = \mathbf{P}(Toothache, Catch, Cavity) \cdot \mathbf{P}(Weather)
+$$
+
+This situation is called **independence**. Formally speaking, $A$ and $B$ are independent if and only if
+
+<div class="info">
+	<b>Independence between Random Variables</b>
+	<p>
+        $$
+        \mathbf{P}(A, B) = \mathbf{P}(A)\mathbf{P}(B)\quad\text{iff }A\text{ and }B\text{ are independent}
+        $$
+    </p>
+</div>
+
+
 
 ---
 
-Notes:
+#### Notes
 
