Finish CS188 Chapter 13 Notes

--- a/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
+++ b/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
@@ -257,10 +257,95 @@ This situation is called **independence**. Formally speaking, $A$ and $B$ are in
         $$
     </p>
 </div>
+Except the equation above, there are also other ways to represent the independence between random variable $A$ and $B$:
 
+$$
+\mathbf{P}(A\mid B) = \mathbf{P}(A)\quad\mathbf{P}(B\mid A) = \mathbf{P}(B)
+$$
 
+By separating the independent random variables from all considered random variables, we can **factored** the full joint distribution into several independent joint distribution tables.
+
+> Example: Suppose we have $n$ coins that are denoted as $C_1$, $C_2$, $\cdots$, $C_n$. If we want to build up a full-joint distribution table, the table will contain $2^n$ entries.
+>
+> $$
+> \mathbf{P}(C_1, C_2, \cdots, C_n) \overrightarrow{\text{  factor  }}\lbrace \mathbf{P}(C_1), \mathbf{P}(C_2), \cdots, \mathbf{P}(C_n)\rbrace
+> $$
+>
+> However, since every coin's state is independent with other coins, we can *factor* the full-joint distribution table into $n$ joint-distribution table, each represent the state of a single coin and independent with each other.
+
+## 13.5 Bayes' Rule and Its Use
+
+In previous section, we have introduced the **product rule** - $P(a\wedge b) = P(a \mid b)P(b)$ and its second form - $P(a\wedge b) = P(b\mid a)P(a)$.
+
+Combining these two forms together and divide both sides by $P(a)$, we get
+
+<div class="info">
+    <b>Bayes' Rule</b>
+    <p>
+        P(b\mid a) = \frac{P(a\mid b)P(b)}{P(a)}
+    </p>
+</div>
+
+It also has a more general rule with some background condition $e$.
+
+$$
+P(Y\mid X, e) = \frac{P(X\mid Y, e)P(Y\mid e)}{P(X\mid e)}
+$$
+
+### 13.5.1 Applying Bayes' Rule: The simple case
+
+In real-world application, we usually see evidence as the $effect$ of some unknown $cause$ and we would like to determine the cause from effect. In this situation, the Bayes' rule becomes
+
+$$
+P(cause\mid effect) = \frac{P(effect\mid cause)P(cause)}{P(effect)}
+$$
+
+Evaluation of $P(effect\mid cause)$ quantifies the relationship in **causal direction** (因果关系)
+
+Evaluation of $P(cause \mid effect)$ quantify the relationship in **diagnostic direction**
+
+> Example
+>
+> Suppose we know that $P(cough) = 0.1$ and $P(covid) = 0.001$. By checking each Covid-19 patient separately, we learn that $P(cough \mid covid) = 0.6$. Now we want to evaluate $P(covid \mid cough)$.
+>
+> $$
+> P(covid \mid cough) = \frac{P(cough \mid covid) P(covid)}{P(cough)} = \frac{0.6\times 0.001}{0.1} = 0.006
+> $$
+>
+> However, sometimes it is hard to get the prior probability of evidence (in this case, $P(cough)$).
+>
+> In this case, we can still find out $P(covid\mid cough)$ by bypassing $P(cough)$ using <u>normalization</u>.
+>
+> $$
+> \mathbf{P}(Covid \mid cough) = \alpha \langle P(cough \mid covid)P(covid), P(cough, \neg covid)P(\neg covid)\rangle
+> $$
+>
+> Where $\alpha$ is the normalization constant that makes $\mathbf{P}(Covid \mid cough)$ sum up to $1$.
+
+### 13.5.2 Using Bayes' rule: Combining Evidence
+
+We introduced the independence between random variables before, but here, we will introduce a new kind of independence - **conditional independence**.
+
+$X$ and $Y$ are conditional independence if and only if
+
+$$
+\mathbf{P}(X, Y\mid Z) = \mathbf{P}(X\mid Z) \mathbf{P}(Y\mid Z)
+$$
+
+Suppose we have one $cause$ and several $effects$, we can calculate the joint distribution of 
+
+<div class="info">
+    <b>Naive Bayes</b>
+    <p>
+        $$
+        \mathbf{P}(Cause, Effect_1, Effect_2, \cdots ,Effect_n) = \mathbf{P}(Cause)\prod_{0\le i\le n}{\mathbf{P}(Effect_i)}
+        $$
+    </p>
+</div>
+
+Such a probability distribution is called **Naïve Bayes** - it is "naive" since it is often used (as simplification) in cases where the effect variables are *not* actually conditionally independent with each other.
 
 ---
 
-#### Notes
+### Notes
 
