--- a/_posts/usaco-analysis/2020-12-11-USACO-Gold-2017-Feb-3.md
+++ b/_posts/usaco-analysis/2020-12-11-USACO-Gold-2017-Feb-3.md
@@ -3,7 +3,7 @@ layout: usaco-post
 title: USACO 2017 Feb Gold P3
 tags: [ USACO analysis ]
 status: OK
-Author: Mark
+Author: ["Mark Chen"]
 year: 2017
 group: Gold
 season: Feb
