--- a/_posts/notes/cs188/2021-05-11-CS188-Chapter6.md
+++ b/_posts/notes/cs188/2021-05-11-CS188-Chapter6.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: CS188 Chapter 6 Constraint Satisfaction Problems
-Author: Mark
+Author: ["Mark Chen"]
 tags: Notes CS188
 ---
 
