--- a/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
+++ b/_posts/notes/cs188/2021-05-30-CS188-Chapter13.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: CS188 Chapter 13 Quantifying Uncertainty
-Author: Mark
+Author: ["Mark Chen"]
 tags: [Notes, CS188]
 ---
 
