--- a/_posts/usaco-analysis/2020-11-16-USACO-Gold-2017-Jan-2.md
+++ b/_posts/usaco-analysis/2020-11-16-USACO-Gold-2017-Jan-2.md
@@ -3,7 +3,7 @@ layout: usaco-post
 title: USACO 2017 Jan Gold P2
 tags: [ USACO analysis ]
 status: OK
-Author: Mark
+Author: ["Mark Chen"]
 year: 2017
 group: Gold
 season: Jan
