Add Chapter 14 Notes draft, Add link to case study, Remove ACSL Final Notification

--- a/_posts/notes/cs188/2021-02-24-CS188-Home.md
+++ b/_posts/notes/cs188/2021-02-24-CS188-Home.md
@@ -48,4 +48,5 @@ Try connect the internet in a more scientific way to see this playlist.
 | 4 | Game Tree (Ch 5) | 这一章描述了对抗性搜索（也就是零和博弈） - 在有两个 Agent 参加的零和博弈中如何找到到达目标节点的路径|<a class='tag' href='{{site.baseurl}}/2021/04/22/CS188-Chapter5.html'>笔记</a>|
 | 5 | Constraint Satisfaction Problem (Ch 6) | 这一章描述了约束满足问题。约束满足问题简单来说就是找到一组变量的赋值使得所有变量之间的约束被同时满足。 |<a class='tag' href='{{site.baseurl}}/2021/05/11/CS188-Chapter6.html'>笔记</a>|
 | 6 | Quantifying Uncertainty (Ch 13) | 这一章描述了为何我们要在 Intelligent Agent 中引入不确定性和我们如何在 Intelligent Agent 中利用概率学知识做出决策 |<a href="{{site.baseurl}}/2021/05/30/CS188-Chapter13.html" class="tag">笔记</a>|
-
+|  | Case Study - Naive Bayes | 在这次 Case Study 中，我们会使用 Chapter 13 中描述的 Naive Bayes 来搭建一个可以分辨 MNIST 手写数字数据集的贝叶斯分类器 |<a href="{{ site.baseurl}}/2021/06/04/CS188-Naive-Bayes-MNIST.html" class="tag">Case Study</a>|
+| 7 | Probabilistic Reasoning (Ch 14) | 【未完成】这一章描述了贝叶斯网络的定义，构建与采样方法 |<a href="{{ site.baseurl }}/2021/06/07/CS188-Chapter14.html" class="tag">笔记</a>|
