Add YAML Generator, Fix <a> tag, improve yaml generator style

--- a/_posts/other-analysis/2021-06-11-SFP.md
+++ b/_posts/other-analysis/2021-06-11-SFP.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: CodeForce2021611周赛（前三题）
+title: CodeForce 20210611 周赛（前三题）
 tags: ["CodeForce", "Other-analysis"]
 division: 3
 number: 725
