--- a/_posts/notes/cs188/2021-02-24-CS188-Home.md
+++ b/_posts/notes/cs188/2021-02-24-CS188-Home.md
@@ -45,7 +45,7 @@ Try connect the internet in a more scientific way to see this playlist.
 | 1      | What is AI (Ch 1)       | 这一章从多个角度定义了“人工智能”，以及为了产生人工智能，在各个领域需要解决的问题 | <a class="tag" href='{{site.baseurl}}/2021/02/25/CS188-Chapter1.html'>笔记</a> |
 | 2 | Intelligent Agent (Ch 2) | 这一章详细的描述了一个 Agent 的定义以及我们如何判断一个 Agent 的行为是“好”的 | <a class='tag' href='{{site.baseurl}}/2021/02/28/CS188-Chapter2.html'>笔记</a> |
 | 3 | Searching Methods (Ch 3) | 这一章描述了几种常用的搜索算法，包括 BFS, DFS, UCS, A* Search 和 Greedy Search | <a class='tag' href='{{site.baseurl}}/2021/02/28/CS188-Chapter3.html'>笔记</a>  <a class='tag' href='https://cs188.ml/project1/'>Project 1</a> |
-| 4 | Game Tree (Ch 5) | 这一章描述了对抗性搜索（也就是零和博弈） - 在有两个 Agent 参加的零和博弈中如何找到到达目标节点的路径|<a class='tag' href='{{site.baseurl}}/2021/04/22/CS188-Chapter5.html'>笔记</a>|
+| 4 | Game Tree (Ch 5) | 这一章描述了对抗性搜索（也就是零和博弈） - 在有两个 Agent 参加的零和博弈中如何找到到达目标节点的路径|<a class='tag' href='{{site.baseurl}}/2021/04/22/CS188-Chapter5.html'>笔记</a> <a class='tag' href='https://cs188.ml/project2/'>Project 2</a>|
 | 5 | Constraint Satisfaction Problem (Ch 6) | 这一章描述了约束满足问题。约束满足问题简单来说就是找到一组变量的赋值使得所有变量之间的约束被同时满足。 |<a class='tag' href='{{site.baseurl}}/2021/05/11/CS188-Chapter6.html'>笔记</a>|
 | 6 | Quantifying Uncertainty (Ch 13) | 这一章描述了为何我们要在 Intelligent Agent 中引入不确定性和我们如何在 Intelligent Agent 中利用概率学知识做出决策 |<a href="{{site.baseurl}}/2021/05/30/CS188-Chapter13.html" class="tag">笔记</a>|
 |  | Case Study - Naive Bayes | 在这次 Case Study 中，我们会使用 Chapter 13 中描述的 Naive Bayes 来搭建一个可以分辨 MNIST 手写数字数据集的贝叶斯分类器 |<a href="{{ site.baseurl}}/2021/06/04/CS188-Naive-Bayes-MNIST.html" class="tag">Case Study</a>|
